injetando dependencias e atualizando swagger
